# movie-shot-categorizer

./: .gitignore  README.md  accelerate_train.py  accuracy.py  api.py  data.py  inference.py  pyproject.toml  readme.md  requirements.txt  run.slurm  shot_classification.ipynb  train.py
configs/accelerate-configs/: ds.yaml
configs/training-configs/: config.yaml
movie-shot-categorizer/src/: categorizer.py
movie_shot_categorizer/src/: __init__.py
src/movie_shot_categorizer/: categorizer.py
